--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SmartCodeLab
-@using SmartCodeLab.Layout
+@* Removing namespace import that causes CI error on Linux runners. Components are discoverable without it. *@
